# SocialNetworkPolarization

./: CMakeLists.txt  Model.cpp  Model.h  main.cpp
BeliefObjects/: Belief.cpp  Belief.h  FirstOrderDiscreteBelief.cpp  FirstOrderDiscreteBelief.h  Interval.cpp  Interval.h
Weights/: WeightSchema.cpp  WeightSchema.h
